k8s/authorization-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-server
  namespace: orderhub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization-server
  template:
    metadata:
      labels:
        app: authorization-server
    spec:
      containers:
        - name: authorization-server
          image: authorization-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: authorization-server
  namespace: orderhub
spec:
  selector:
    app: authorization-server
  ports:
    - port: 9000
      targetPort: 9000
